--- a/Cargo.toml
+++ b/Cargo.toml
@@ -55,4 +55,5 @@ rs-humanize = "1.2"
 played-rs = { path = "/home/colin/Projects/coadler/played-rs" }
 
 [profile.release]
-lto = true
+debug = true
+# lto = true
