--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,23 +8,29 @@ edition = "2018"
 
 [dependencies]
 anyhow = "1.0"
-chrono = "0.4"
 arrayvec = "0.5.1"
 async-trait = "0.1"
-blake3 = "0.3.6"
+blake3 = "0.3"
 byteorder = "1.3"
+lazy_static = "1.4"
 bytes = "0.5"
+hex = "0.4"
 cached = "0.18"
+chrono = "0.4"
 foundationdb = { git = "https://github.com/Clikengo/foundationdb-rs", branch = "master" }
 futures = "0.3"
 jemallocator = "0.3"
 pin-project = "0.4"
+rand = "0.7"
 reqwest = { version = "0.10", features = ["stream", "gzip", "brotli"] }
+rs-humanize = "1.2"
 rusoto_core = "0.45"
 rusoto_s3 = "0.45"
 rusoto_signature = "0.45"
-salsa20 = "0.6"
 rust-s3 = "0.24.0"
+salsa20 = "0.6"
+serde = "1.0"
+serde_cbor = "0.11"
 serde_json = "1.0"
 strum = "0.19"
 strum_macros = "0.19"
@@ -36,12 +42,8 @@ twilight-command-parser = { branch = "trunk", git = "https://github.com/twilight
 twilight-embed-builder = { branch = "trunk", git = "https://github.com/twilight-rs/twilight.git" }
 twilight-gateway = { branch = "trunk", git = "https://github.com/twilight-rs/twilight.git" }
 twilight-http = { branch = "trunk", git = "https://github.com/twilight-rs/twilight", default-features = false, features = ["rustls", "simd-json"] }
-twilight-model = { branch = "trunk", git = "https://github.com/twilight-rs/twilight.git" }
 twilight-mention = { branch = "trunk", git = "https://github.com/twilight-rs/twilight.git" }
-rand = "0.7"
-serde = "1.0"
-serde_cbor = "0.11"
-rs-humanize = "1.2"
+twilight-model = { branch = "trunk", git = "https://github.com/twilight-rs/twilight.git" }
 
 # twilight = { path = "/home/colin/Projects/twilight-rs/twilight/twilight" }
 # twilight-cache-inmemory = { path = "/home/colin/Projects/twilight-rs/twilight/cache/in-memory" }
